<resources>
    <string name="app_name">Guia 3 Listas</string>
    <string name="vLista">Ver lista</string>
    <string name="addNam">Agregar nombre</string>
    <string name="info">Mis datos</string>
    <string name="nombre">Carlos Javier Cañénguez Martínez</string>
    <string name="codigo">CM16-I04-001</string>
    <string name="tituloDatos">Mis datos</string>
    <string name="tituloLista">Lista de nombres</string>
    <string name="msgRegistro">Ingrese el nombre</string>
    <string name="hNombre">Nombre</string>
    <string name="msgGuardar">Guardar</string>
</resources>
