<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/msgRegistro" />}

    <EditText
        android:id="@+id/edtNombre"
        android:hint="@string/hNombre"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/proBar"
        android:progress="0"
        android:max="100"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/porcentaje"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:onClick="GuardarRegistro"
        android:text="@string/msgGuardar" />

</LinearLayout>